refactor: fix docker interpolation and java syntax, finalize swagger docs