@@ -12,7 +12,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -42,6 +41,6 @@ public class GroupServiceImpl implements GroupService { // <--- CORRETTO: implem
     public List<GroupResponseDto> getAllGroups() {
         return groupRepository.findAll().stream()
                 .map(groupMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
