@@ -1,6 +1,9 @@
 package com.catalog.userservice.service.impl;
 
-import com.catalog.userservice.dto.*;
+import com.catalog.userservice.dto.AuthRequestDto;
+import com.catalog.userservice.dto.AuthResponseDto;
+import com.catalog.userservice.dto.UserRequestDto;
+import com.catalog.userservice.dto.UserResponseDto;
 import com.catalog.userservice.entity.UserEntity;
 import com.catalog.userservice.exception.DuplicateResourceException;
 import com.catalog.userservice.exception.ResourceNotFoundException;
@@ -14,7 +17,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -63,6 +65,6 @@ public class UserServiceImpl implements UserService {
     public List<UserResponseDto> getAllUsers() {
         return userRepository.findAll().stream()
                 .map(userMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
